<resources>
    <string name="app_name">Mid22</string>
    <string name="function1">function1</string>
    <string name="function2">function2</string>
    <string name="function3">function3</string>
    <string name="function4">function4</string>
    <string name="function5">function5</string>
    <string name="function6">function6</string>
    <string name="function7">function7</string>
    <string name="funtion8">funtion8</string>
</resources>
